# language-interpolation

./: .gitignore  Pipfile  README.md  language_cellular_automata.py  language_interpolation.py  language_interpolation_conv.py  language_interpolation_gbm.py  pyproject.toml  roberta.py  single_text_dataset.py
.github/workflows/: python-app.yml
books/: goose_that_laid_the_golden_egg.txt
config/: high_order_interpolation.yaml  language_config.yaml  language_config_fcn.yaml  language_config_gbm.yaml  overflow_config.yaml
config/book_lists/: 10scifi.yaml
config/mlp/: large_double_layer..yaml  large_single_layer.yaml  large_standard.yaml  small.yaml
config/net/: conv.yaml  dual_convolution.yaml  large_double_layer.yaml  large_single_layer.yaml  large_standard.yaml  mamba.yaml  small.yaml  tail_focus.yaml  transformer.yaml
config/optimizer/: adam.yaml  lion.yaml  sparse_lion.yaml
examples/: high_order_convnet.py  high_order_interpolation.py  language_cellular_automata.py  language_interpolation.py  language_interpolation_conv.py  language_interpolation_gbm.py  overflow_network.py  roberta.py
language_interpolation/: dataset_from_representation.py  dual_convolutional_network.py  lightning_datamodule.py  networks.py  overflow_network.py  single_text_dataset.py  state_space_network.py  utils.py
tests/: test_attention_network.py  test_dataloader.py  test_dataset_from_representation.py  test_datasets.py  test_datsets.py  test_dual_convolution.py  test_overflow_network.py  test_utils.py
