[tool.poetry]
name = "language-interpolation"
version = "0.3.0"
description = ""
authors = ["jloveric <john.loverich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torchsummary = "^1.5.1"
omegaconf = "^2.1.1"
gutenbergpy = {git = "https://github.com/jloveric/gutenbergpy.git"}
torch-intermediate-layer-getter = "^0.1.post1"
torch-optimizer = "^0.3.0"
#hydra-nevergrad-sweeper = "1.3.0.dev0"
pytorch-lightning = "^2.0.0"
high-order-layers-torch = "^2.0.0"
langchain = "^0.0.334"
torch = "2.0.0"
hydra-core = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^6.2.5"
lightgbm = "^3.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
